[package]
name = "bifrost-token-issuer"
version = "0.8.0"
authors = ["Herry Ho <herry.heyi@gmail.com>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
frame-support = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9", default-features = false }
node-primitives = { path = "../../node/primitives", default-features = false }
orml-traits = { version = "0.4.1-dev", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
orml-tokens = { version = "0.4.1-dev", default-features = false }
orml-currencies = { version = "0.4.1-dev", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }
pallet-collective = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.9" }


[features]
default = ["std"]
std = [
	"codec/std",
	"node-primitives/std",
	"frame-support/std",
	"frame-system/std",
	"orml-traits/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-io/std",
	"pallet-collective/std",
	"orml-tokens/std",
	"orml-currencies/std",
	"pallet-balances/std"
]